--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <header>
+    <div class="container__header">
     <div class="container logo-nav-container">
         <a href="index.html"><img src="espartan_final.png" alt="logo de la compañia"></a>
         <nav class="navigation">
@@ -23,15 +24,10 @@
             </ul>
         </nav>
     </div>
-</header>
-
-<div class="container-all">
-    <div class="content-all">
-        <div class="content-img"
-        <a href="" class="icon-left open"></a>
-        <img src="gym.jpg">
-        <a hhref="" class="icon-right-open"
     </div>
-    
+</header>
+<section class="contenido">
+    <img src="gimnasio.jpg">
+</section>
 </body>
 </html>
