--- a/inicio.html
+++ b/inicio.html
@@ -13,15 +13,13 @@
             <nav class="navigation">
                 <ul>    
                     <li><a class="link-nav" href="#">SEDE</a></li>
-                    <li><a class="link-nav" href="#">PLANES</a></li>
+                    <li><a class="link-nav" href="#">PLAN</a></li>
                     <li><a class="link-nav" href="#">CLASES</a></li>
                     <li><a class="fas fa-shopping-cart icon" style= "color:white;" href="inicio.html"></a></li>
                     <a href="inicio.html"><li><i class="fas fa-user-circle icon" style= "color:white;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></li></a>
                 </ul>
             </nav>
         </div>
-    
-    
     </header>
 
 
