--- a/index.html
+++ b/index.html
@@ -3,31 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>Principal</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"
-  />
-  <link rel="stylesheet" type="text/css" href="fontello.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="fontello.css">
 </head>
 <body>
 <header>
-    <div class="container__header">
-    <div class="container logo-nav-container">
-        <a href="index.html"><img src="espartan_final.png" alt="logo de la compañia"></a>
-        <nav class="navigation">
-            <ul>    
-                <li><a class="link-nav" href="#">SEDE</a></li>
-                <li><a class="link-nav" href="#">PLANES</a></li>
-                <li><a class="link-nav" href="#">CLASES</a></li>
-                <li><a class="fas fa-shopping-cart icon" style= "color:white;" href="inicio.html"></a></li>
-                <a href="inicio.html"><li><i class="fas fa-user-circle icon" style= "color:white;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></li></a>
-            </ul>
-        </nav>
+        <div class="logo">
+        <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
+        </div>
+         <nav class="navigation">  
+                <a href="" class="link-nav" href="#">SEDE</a>
+                 <a href="" class="link-nav" href="#">PLANES</a>
+                <a href="" class="link-nav" href="#">CLASES</a>
+                <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
+                <a href="inicio.html"><i class="fas fa-user-circle icon" style= "color:black;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></a>
+         </nav>
+</header> 
+<ssection>        
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="imagenes/banner.jpg" class="d-block w-100" alt="banner 1">
+      </div>
+      <div class="carousel-item">
+        <img src="imagenes/banner2.jpg" class="d-block w-100" alt="banner 2">
+      </div>
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </button>
     </div>
-    </div>
-</header>
-<section class="contenido">
-    <img src="gimnasio.jpg">
+</div> 
 </section>
+<section>
+    <div class="title">Nuestros Planes</div>
+    <div class="row">
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+      </div>
+</section>  
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
