--- a/inicio.html
+++ b/inicio.html
@@ -3,29 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Principal</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo-form.css">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
 	</head>
 <body>
-    <header>
-        <div class="container logo-nav-container">
-            <a href="index.html"><img src="espartan_final.png" alt="logo de la compañia"></a>
-            <nav class="navigation">
-                <ul>    
-                    <li><a class="link-nav" href="#">SEDE</a></li>
-                    <li><a class="link-nav" href="#">PLAN</a></li>
-                    <li><a class="link-nav" href="#">CLASES</a></li>
-                    <li><a class="fas fa-shopping-cart icon" style= "color:white;" href="inicio.html"></a></li>
-                    <a href="inicio.html"><li><i class="fas fa-user-circle icon" style= "color:white;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></li></a>
-                </ul>
-            </nav>
+<header>
+        <div class="logo">
+        <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
         </div>
-    </header>
-
-
-
+         <nav class="navigation">  
+                <a href="" class="link-nav" href="#">SEDE</a>
+                <a href="" class="link-nav" href="#">PLANES</a>
+                <a href="" class="link-nav" href="#">CLASES</a>
+                <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
+                <a href="inicio.html"><i class="fas fa-user-circle icon" style= "color:black;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></a>
+         </nav>
+</header>
+<main>
     <form action="login.php" method="post" class="formulario">
-
         <h1>Inicia Sesion</h1>
      <div class="contenedor">
          
@@ -44,6 +40,6 @@
          <p>¿No tienes una cuenta?<a class="link" href="regitrar.html">Registrate</a></p>
      </div>
        </form>
-    
+</main>
 </body>
 </html>
