--- a/regitrar.html
+++ b/regitrar.html
@@ -2,25 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <title>Registrate</title>
+    <link rel="stylesheet" type="text/css" href="estilos/estilo-form.css">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
 </head>
 <body>
     <header>
-        <div class="container logo-nav-container">
-            <a href="index.html"><img src="espartan_final.png" alt="logo de la compañia"></a>
-            <nav class="navigation">
-                <ul>    
-                    <li><a class="link-nav" href="#">SEDE</a></li>
-                    <li><a class="link-nav" href="#">PLANES</a></li>
-                    <li><a class="link-nav" href="#">CLASES</a></li>
-                    <li><a class="fas fa-shopping-cart icon" style= "color:white;" href="inicio.html"></a></li>
-                    <a href="inicio.html"><li><i class="fas fa-user-circle icon" style= "color:white;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></li></a>
-                </ul>
-            </nav>
+        <div class="logo">
+        <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
         </div>
-    
+         <nav class="navigation">  
+                <a href="" class="link-nav" href="#">SEDE</a>
+                <a href="" class="link-nav" href="#">PLANES</a>
+                <a href="" class="link-nav" href="#">CLASES</a>
+                <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
+                <a href="inicio.html"><i class="fas fa-user-circle icon" style= "color:black;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></a>
+         </nav>
     </header>
     <form action="login.php" method="post" class="formulario">
 
