--- a/inicio.html
+++ b/inicio.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Principal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilos/estilo-form.css">
     <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
 	</head>
 <body>
-<header>
+    <header id="main-header">
         <div class="logo">
         <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
         </div>
          <nav class="navigation">  
                 <a href="" class="link-nav" href="#">SEDE</a>
-                <a href="" class="link-nav" href="#">PLANES</a>
+                 <a href="#planes" class="link-nav" href="#">PLANES</a>
                 <a href="" class="link-nav" href="#">CLASES</a>
                 <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
-                <a href="inicio.html"><i class="fas fa-user-circle icon" style= "color:black;"><e style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: large;"> MI CUENTA</e></i></a>
-         </nav>
-</header>
+               </nav>
+</header> 
 <main>
     <form action="login.php" method="post" class="formulario">
-        <h1>Inicia Sesion</h1>
+        <h1 style="font-family:'Anton' ;">INICIA SESION</h1>
      <div class="contenedor">
          
          <div class="input-contenedor">
