--- a/inicio.html
+++ b/inicio.html
@@ -8,7 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilos/estilo-form.css">
     <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
 	</head>
 <body>
@@ -19,8 +18,7 @@
          <nav class="navigation">  
                 <a href="" class="link-nav" href="#">SEDE</a>
                  <a href="#planes" class="link-nav" href="#">PLANES</a>
-                <a href="" class="link-nav" href="#">CLASES</a>
-                <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
+                <a href="plan.html" class="link-nav" href="#">CLASES</a>
                </nav>
 </header> 
 <main>
