--- a/inicio.html
+++ b/inicio.html
@@ -15,11 +15,6 @@
         <div class="logo">
         <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
         </div>
-         <nav class="navigation">  
-                <a href="" class="link-nav" href="#">SEDE</a>
-                 <a href="#planes" class="link-nav" href="#">PLANES</a>
-                <a href="plan.html" class="link-nav" href="#">CLASES</a>
-               </nav>
 </header> 
 <main>
     <form action="login.php" method="post" class="formulario">
@@ -38,7 +33,7 @@
          
          </div>
          <input type="submit" value="INGRESAR" class="button">
-         <p>¿No tienes una cuenta?<a class="link" href="regitrar.html">Registrate</a></p>
+         <p>¿No tienes una cuenta?<a class="link" href="regitrar.php">Registrate</a></p>
      </div>
        </form>
 </main>
