--- a/form_cliente.html
+++ b/form_cliente.html
@@ -18,7 +18,7 @@
     </div>
     </header>
     <div class="title">
-        <h1 align="center">HORARIO</h1>
+        <h1 align="center">Mi Perfil</h1>
     </div>
     <form class="row g-3">
         <div class="col-md-6">
