--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <!-- CSS only -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Arima:wght@100&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="estilos/estilo-encabezado.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" type="text/css" href="fontello.css">
+ 
+
 </head>
-<body>
+<body id="principal">
 <header id="main-header">
         <div class="logo">
         <a href="index.html"><img src="imagenes/espartan_final.png" alt=""></a>
         </div>
          <nav class="navigation">  
-                <a href="" class="link-nav" href="#">SEDE</a>
+                <a href="#ubicacion" class="link-nav" href="#">SEDE</a>
                  <a href="#planes" class="link-nav" href="#">PLANES</a>
                 <a href="" class="link-nav" href="#">CLASES</a>
                 <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
@@ -54,7 +54,7 @@
 </div> 
 </section>
 <section class="planes" id="planes">
-    <div class="title"><img src="imagenes/titulo.jpg" id="imgcard"></div>
+    <div class="title"><h1>Nuestros Servicios</h1></div>
     <div class="row">
         <div class="col-sm-3">
           <div class="card">
@@ -113,7 +113,19 @@
             </div>
           </div>
       </div>
-</section>  
+</section>
+<section class="ubication" id="ubicacion">
+<div class="title-ubication"><h1>UBICACION</h1></div>
+<div class="section-columns">
+  <div class="sec-text">
+    <div><i class='fas fa-map-marker-alt fa-2x'> Sede Los Olivos</i></li></div>
+    <div>Av. Globo Terráqueo 7461 - Los Olivos - Lima - Lima</div>
+  </div>  
+  <div class="maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.636733966382!2d-77.0673330776401!3d-11.999618964307242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cef8cfe51425%3A0x6bacdcd85fd4d1db!2sAv.%20Globo%20Terr%C3%A1queo%207461%2C%20Los%20Olivos%2015302!5e0!3m2!1ses-419!2spe!4v1658545511075!5m2!1ses-419!2spe" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+</div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
