--- a/usuario1.html
+++ b/usuario1.html
@@ -25,7 +25,7 @@
 
         <div class="menu__side" id="side_menu">
             <div class="menu__name">
-                    <img src="imagenes/espartan_final.png" id="img_side">
+                 <a href="index.html">  <img src="imagenes/espartan_final.png" id="img_side"></a> 
             <h4>SpartanGym</h4>
             </div>
 
