--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
          <nav class="navigation">  
                 <a href="#ubicacion" class="link-nav" href="#">SEDE</a>
                  <a href="#planes" class="link-nav" href="#">PLANES</a>
-                <a href="" class="link-nav" href="#">CLASES</a>
-                <a href="" class="fas fa-shopping-cart icon" style= "color:black;" href="inicio.html"></a>
+                <a href="dieta.html" class="link-nav" href="#">CLASES</a>
                 <a href="inicio.html"><i class="fas fa-user-circle icon" style= "color:black;"><e style="font-family: 'Anton', sans-serif"> MI CUENTA</e></i></a>
          </nav>
 </header> 
