--- a/inicio.html
+++ b/inicio.html
@@ -33,7 +33,7 @@
          
          </div>
          <input type="submit" value="INGRESAR" class="button">
-         <p>¿No tienes una cuenta?<a class="link" href="regitrar.php">Registrate</a></p>
+         <p>¿No tienes una cuenta?<a class="link" href="registrar.html">Registrate</a></p>
      </div>
        </form>
 </main>
